Add in Html & Css files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;700&family=Coming+Soon&family=Mouse+Memoirs&family=Open+Sans:ital,wght@0,400;0,500;0,700;1,300&display=swap">
-    <title>Anime Aeara</title>
+    <title>Naruto Area</title>
 </head>
 <body>
     <!-- Start Sitting Box -->
@@ -75,7 +75,7 @@
         <div class="overlay"></div>
         <div class="container">
             <div class="header-area">
-                <div class="logo">Anime Area</div>
+                <div class="logo">Naruto Area</div>
                 <div class="container-links">
                     <ul class="links">
                         <li><a href="#" data-section=".about-us">About</a></li>
@@ -98,7 +98,7 @@
                 <h1>naruto: shippuden</h1>
                 <p>
                     Naruto : Shippuden is one of my favourite animes. so I thought why not :P
-                    Anime Area is a hypothetical website for anime lovers.
+                    Naruto Area is a hypothetical website for anime lovers.
                 </p>
             </div>
     </div>
@@ -435,7 +435,7 @@
     <!-- End Contact -->
     <!-- Start Footer -->
     <div class="footer">
-        Made With <i class="fa fa-heart c-main"></i> By <a href="https://t.me/o3mrl" target="_blank">OmarTh</a> © 2022
+        Made With <i class="fa fa-heart c-main"></i> By <a href="https://t.me/o3mrl" target="_blank">Dark Code</a> © 2022
     </div>
     <!-- End Footer -->
     <script src="master.js"></script>
